--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "phpunit/phpunit": "^7.5"
     },
     "autoload": {
-        "App//": "src"
+        "psr-4": {
+            "App\\": "src/"
+        }
     },
     "autoload-dev": {
-        "Tests//": "tests"
+        "Tests\\": "tests"
     },
     "scripts": {
         "cs": "vendor/bin/phpcs --standard=PSR12 src",
